Add ruf sync configuration to sync.yml

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -5,3 +5,7 @@ andrewhowdencom/interviewer:
 andrewhowdencom/announce:
   - AGENTS.md
   - docs/development
+
+andrewhowdencom/ruf:
+  - AGENTS.md
+  - docs/development
