Add stdlib sync configuration to sync.yml

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -9,3 +9,7 @@ andrewhowdencom/announce:
 andrewhowdencom/ruf:
   - AGENTS.md
   - docs/development
+
+andrewhowdencom/stdlib:
+  - AGENTS.md
+  - docs/development 
