--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -13,3 +13,7 @@ andrewhowdencom/ruf:
 andrewhowdencom/stdlib:
   - AGENTS.md
   - docs/development 
+
+andrewhowdencom/vector:
+  - AGENTS.md
+  - docs/development
