Add otlp.network to sync.yml

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -17,3 +17,7 @@ andrewhowdencom/stdlib:
 andrewhowdencom/vector:
   - AGENTS.md
   - docs/development
+
+andrewhowdencom/otlp.network:
+  - AGENTS.md
+  - docs/development
