chore(main): Publish skills on push

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -29,5 +29,6 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         namespace: ${{ env.NAMESPACE }}
+        repository: ${{ github.event.repository.name }} # Creates: ghcr.io/owner/repo.skill
         base: ${{ github.event.before }}
         path: ./skills
