Add documentation skill
Design:
  Introduce a new documentation skill based on the Diátaxis framework to standardize documentation practices.

Justification:
  To ensure consistent, high-quality documentation that is maintained alongside code and separates developer-facing from user-facing content.

Tradeoffs:
  Requires developers to learn the Diátaxis framework, but improves long-term maintainability and clarity.

--- a/.skr.yaml
+++ b/.skr.yaml
@@ -1,3 +1,6 @@
 agents: []
 skills:
     - ghcr.io/andrewhowdencom/skills.git:latest
+    - ghcr.io/andrewhowdencom/skr.skill
+    - ghcr.io/andrewhowdencom/skr.skill:latest
+    - ghcr.io/andrewhowdencom/skr.builder:latest
